Updated yaml files to include r and N_pivot parameters in new model 	modified:   yaml_files/CosmoBit_ALP.yaml 	modified:   yaml_files/CosmoBit_exoClass.yaml 	modified:   yaml_files/CosmoBit_quickStart.yaml 	modified:   yaml_files/CosmoBit_testALP.yaml 	modified:   yaml_files/CosmoBit_testCosmo.yaml 	modified:   yaml_files/CosmoBit_testMP.yaml 	modified:   yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -89,6 +89,8 @@ Parameters:
     n_s:
       prior_type: flat
       range: [0.9,1.10]
+    r: 0
+    N_pivot: 55
 
   # extension of standard LCDM: allow for values of dNeff @CMB & @ BBN different from today
   dNurBBN_dNurCMB:
