--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -28,6 +28,8 @@ Parameters:
     n_s:
       prior_type: flat
       range: [0.9,1.10]
+    r: 0
+    N_pivot: 55
 
   # Everything Neff and eta related
   #etaBBN: !import include/etaBBN.yaml
