--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -33,6 +33,8 @@ Parameters:
     n_s:
       prior_type: flat
       range: [0.9,1.10]
+    r: 0
+    N_pivot: 55
 
   # neutrino masses
   StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
