--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -95,7 +95,7 @@ Rules:
 
   - capability: classy_primordial_parameters
     function: set_classy_parameters_parametrised_ps
-#    function: set_classy_parameters_primordial_ps
+    #function: set_classy_parameters_primordial_ps
 
   - capability: classy_baseline_params
     #function: set_classy_baseline_params
@@ -114,7 +114,7 @@ Rules:
   #                      # calculate for every inflation model? Then we can add it to the set_classy_function (there probably
   #                      # is but I just have no idea about inflation ;))
 
-  # error calculation precision settings for AltterBBN
+  # error calculation precision settings for AlterBBN
   # (use 1 and 0 to speed up Helium abundance calculation for testing)
   - capability: AlterBBN_Input
     options:
