Removed default neutrino mass model and implemented it as a yaml file.  Now all scans that depend on neutrino masses must include a neutrino mass model. 	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp 	modified:   CosmoBit/src/CosmoBit.cpp 	modified:   yaml_files/CosmoBit_ALP.yaml 	modified:   yaml_files/CosmoBit_exoClass.yaml 	modified:   yaml_files/CosmoBit_testALP.yaml 	modified:   yaml_files/CosmoBit_testCosmo.yaml 	modified:   yaml_files/CosmoBit_testMP.yaml 	renamed:    yaml_files/include/StandardModel_numass_degenerate_scan.yaml -> yaml_files/include/StandardModel_SLHA2_Planckbaseline.yaml 	deleted:    yaml_files/include/StandardModel_numass_single_scan.yaml

--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -23,9 +23,10 @@
 #======== Input parameter declarations =======
 Parameters:
 
-  # --- import model parameters for models to scan over ---
+  # Base LCDM
   LCDM: !import include/LCDM_scan.yaml
 
+  # Simple power-law spectrum of perturbations
   PowerLaw_ps:
     ln10A_s:
       prior_type: flat
