--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -8,6 +8,8 @@ Parameters:
 
   LCDM: !import include/LCDM_scan.yaml
 
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_Planckbaseline.yaml
+
   PowerLaw_ps:
     ln10A_s:
       prior_type: flat
