--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -10,15 +10,13 @@ Parameters:
 
   StandardModel_SLHA2: !import include/StandardModel_SLHA2_Planckbaseline.yaml
 
-  PowerLaw_ps:
+  Minimal_PowerLaw_ps:
     ln10A_s:
       prior_type: flat
       range: [2.9,3.2]
     n_s:
       prior_type: flat
       range: [0.9,1.10]
-    r: 0
-    N_pivot: 55
 
   CosmoALP:
     fa: 1.0
