--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -224,7 +224,6 @@ ObsLikes:
     capability:   BBN_abundances
     sub_capabilities: [Li7]
 
-
   # ---- MontePython Likelihoods -----
   # The total lnL from MontePython
   # Since the single MontePython likelihoods are not implemented in GAMBIT as capabilites
@@ -268,23 +267,7 @@ ObsLikes:
 #======== Rule entries ========
 Rules:
 
-  # ---- CMB -----
-  # Set the path to the Planck data, you can download them here
-  # (2015) http://pla.esac.esa.int/pla/aio/product-action?COSMOLOGY.FILE_ID=COM_Likelihood_Data-baseline_R2.00.tar.gz
-  # (2019) http://pla.esac.esa.int/pla/aio/product-action?COSMOLOGY.FILE_ID=COM_Likelihood_Data-baseline_R3.00.tar.gz
-  #
-  - capability: plc_3_0_init
-    options:
-      plc_prefix: /home/janina/code/PlanckLike/ # modify here! => path
-      #plc_prefix: /path/to/your/PlanckLike # modify here! => path
-      # || don't use this syntax, there is a bug when you only specify the path to one version..
-      # \/
-      #plc_2.0_path: /home/janina/code/PlanckLike/plc_2.0
-      #plc_3.0_path: /home/janina/code/PlanckLike/plc_3.0/
-
-
-  # specify any CLASS input parameters (despite the model parameters) that usually go into
-  # the .ini file here
+  # Specify any CLASS input parameters (despite the model parameters) that usually go into the .ini file here
   - capability: classy_baseline_params
     function: set_classy_baseline_params
     #options:
@@ -302,8 +285,8 @@ Rules:
                       # since otherwise the automatic output setting will not work
         #l_max_scalars: 2508  # have to set this as well by hand to match the max l needed for Planck likelihood
 
-  # you have to set by hand if you want to set the class parameters with or without setting arguments from MontePython Likelihoods
-  # if the montepythonlike backend is installed (if not it should automatically choose the function 'init_Classy_cosmo_container')
+  # You need to choose by hand whether to have the possibility to set up the class parameters with arguments from MontePython Likelihoods.
+  # GAMBIT will tell you if you get this wrong; if it doesn't complain it is fine.
   - capability: classy_final_input
     function: set_classy_input_with_MPLike
     module: CosmoBit
