Adjust rules of yaml-files to new plc options
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_testALP.yaml
	modified:       yaml_files/CosmoBit_testCosmo.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -144,8 +144,8 @@ Rules:
 
   - capability: plc_3_0_init
     options:
-      #plc_2.0_path: /PATH/TO/plc_2.0
-      #plc_3.0_path: /PATH/TO/plc_3.0
+      #plc_data_2_path: /PATH/TO/plc_2.0
+      #plc_data_3_path: /PATH/TO/plc_3.0
 
   # Compute a total (effective) f(z) instead of f(z) per channel
   - capability: DarkAges_1_2_0_init
