--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -175,8 +175,8 @@ Rules:
 
   - capability: plc_3_0_init
     options:
-      #plc_2.0_path: /PATH/TO/plc_2.0
-      #plc_3.0_path: /PATH/TO/plc_3.0
+      #plc_data_2_path: /PATH/TO/plc_2.0
+      #plc_data_3_path: /PATH/TO/plc_3.0
 
   - capability: lifetime
     function: lifetime_ALP_agg
