Changed neutrino mass models in CosmoBit yaml files from 'both' to 'NH'
	modified:       CosmoBit_exoClass.yaml
	modified:       CosmoBit_inflationTest.yaml
	modified:       CosmoBit_testALP.yaml
	modified:       CosmoBit_testCosmo.yaml
	modified:       CosmoBit_testMP.yaml
	modified:       CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -44,7 +44,7 @@ Parameters:
 
 
  # neutrino masses
- #StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
+ StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
