--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -80,12 +80,12 @@ Scanner:
 ObsLikes:
 
   - purpose:      LogLike
-    capability:   md21_lnL
+    capability:   md21_NuFit_v4_1_lnL
     module:       NeutrinoBit
     type:         double
 
   - purpose:      LogLike
-    capability:   md3l_lnL
+    capability:   md3l_NuFit_v4_1_lnL
     module:       NeutrinoBit
     type:         double
 
