--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -220,24 +220,24 @@ ObsLikes:
   - capability: perturbativity_lnL
     purpose: LogLike
 
-  # NuFit likelihoods
+  # NuFit v3.2 likelihoods
   
-  - capability: theta12_lnL
+  - capability: theta12_NuFit_3_2_lnL
     purpose: LogLike
 
-  - capability: theta23_lnL
+  - capability: theta23_NuFit_3_2_lnL
     purpose: LogLike
 
-  - capability: theta13_lnL
+  - capability: theta13_NuFit_3_2_lnL
     purpose: LogLike
 
-  - capability: deltaCP_lnL
+  - capability: deltaCP_NuFit_3_2_lnL
     purpose: LogLike
 
-  - capability: md21_lnL
+  - capability: md21_NuFit_3_2_lnL
     purpose: LogLike
 
-  - capability: md3l_lnL
+  - capability: md3l_NuFit_3_2_lnL
     purpose: LogLike
 
   - capability: sum_mnu_lnL
