--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -59,11 +59,14 @@
 Parameters:
 
   # Neutrino masses, choose between normal hierachy (NH) and inverted hierarch (IH)
-  #    To fix the sum of the neutrino masses to 0.06 with only one massive neutrino
-  #    (as in Planck 'baseline' analysis don't include the model 'StandardModel_mNudiff'
-  #    into the scan)
   StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
   #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
+
+  # To fix the sum of the neutrino masses to 0.06 with only one massive neutrino
+  #    (as in Planck 'baseline' analysis don't include the model 'StandardModel_mNudiff'
+  #    into the scan)
+  # uncomment the line below (and do not use 'StandardModel_mNudiff') 
+  #StandardModel_SLHA2: !import include/StandardModel_SLHA2_Planckbaseline.yaml
 
   # base-line LCDM model parameters and prior
   LCDM:
