Added planck prior on ksz%

--- a/yaml_files/polychord_fast_slow.yaml
+++ b/yaml_files/polychord_fast_slow.yaml
@@ -224,6 +224,9 @@ ObsLikes:
     capability:   Planck_lensing_loglike
     function:     function_Planck_lensing_2018_loglike
 
+  - purpose:      LogLike
+    capability:   Planck_sz_prior_loglike
+
 #======== Rule entries ========
 Rules:
 
