Added nullprinter to spartan.yaml
	modified:       yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -46,6 +46,8 @@ Printer:
 
   #printer: cout
 
+  #printer: "null" # <- 'null' needs to be put in quotations. Otherwise, the parser will confuse it with an empty YAML node.
+
 Scanner:
 
   use_scanner: random
