Renamed nullPrinter to nonePrinter
	renamed:        Printers/include/gambit/Printers/printers/nullprinter.hpp -> Printers/include/gambit/Printers/printers/noneprinter.hpp
	modified:       yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -46,7 +46,7 @@ Printer:
 
   #printer: cout
 
-  #printer: "null" # <- 'null' needs to be put in quotations. Otherwise, the parser will confuse it with an empty YAML node.
+  #printer: none
 
 Scanner:
 
