Changed default of print_unitcube from true to false.
  * Also adjusted the usage of this option in spartan.yaml (Printing of unitCubeParameters is enabled there)

	modified:       Core/include/gambit/Core/depresolver.hpp
	modified:       Core/src/depresolver.cpp
	modified:       Printers/include/gambit/Printers/basebaseprinter.hpp
	modified:       yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -121,7 +121,7 @@ KeyValues:
 
   print_timing_data: true
 
-  print_unitcube: false
+  print_unitcube: true
 
   likelihood:
     model_invalid_for_lnlike_below: -1e6
