--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -92,6 +92,13 @@ Parameters:
   # uncomment the line below (and do not use 'StandardModel_mNudiff') 
   #StandardModel_SLHA2: !import include/StandardModel_SLHA2_Planckbaseline.yaml
 
+  # neutron lifetime
+  nuclear_params_neutron_lifetime: 
+    neutron_lifetime: 
+      prior_type: gaussian
+      mean: [880.2]
+      sigs: [1]
+
   # base-line LCDM model parameters and prior
   LCDM:
     omega_b:
@@ -297,6 +304,13 @@ Rules:
     module: CosmoBit
 
   # ---- BBN -----
+
+  # If neutron lifetime is not a model parameter and you don't want to use the 
+  # default value of 880.2 s it can be overwritten with this rule
+  #- capability: neutron_lifetime
+  #  function: set_default_neutron_lifetime
+  #  options:
+  #    neutron_lifetime: 880.9
 
   # Set path to file containing measured values of light element abundances to use for
   # Likelihood calculation (assumes root directory is gambit/CosmoBit/data/BBN)
