Added cmake option to enable/disable downloads with Axel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,11 +217,16 @@ foreach(module yaml os re datetime sys getopt shutil itertools)
 endforeach()
 
 # Check for axel
-find_program(axel_FOUND axel)
-if(axel_FOUND)
-  message("${BoldYellow}   Found axel.${ColourReset} Backend and scanner downloads will be as fast as possible.")
+option(WITH_AXEL "Compile with MPI enabled" OFF)
+if(WITH_AXEL)
+  find_program(axel_FOUND axel)
+  if(axel_FOUND)
+    message("${BoldYellow}   Found axel.${ColourReset} Backend and scanner downloads will be as fast as possible.")
+  else()
+    message("${Red}   Axel utility not found.  Backend downloads would be faster if you installed axel.${ColourReset}")
+  endif()
 else()
-  message("${Red}   Axel utility not found.  Backend downloads would be faster if you installed axel.${ColourReset}")
+  message("${BoldCyan} X Axel is disabled. Please use -DWITH_AXEL=ON to enable fast downloads with Axel.${ColourReset}")
 endif()
 
 # Do OSX checks
