First attempt to disbale printing for fast parameters in Polychord
  * !!This is buggy!!, as Polychord assigns Posterior weights etc. also to the fast steps.
  * The coordinates (rank and ID) can then not be found in the main datastram of the printer such that a lot of points are lost.

	modified:       ScannerBit/include/gambit/ScannerBit/scanners/polychord/polychord.hpp
	modified:       ScannerBit/src/scanners/polychord/polychord.cpp
	modified:       yaml_files/polychord_fast_slow.yaml

--- a/yaml_files/polychord_fast_slow.yaml
+++ b/yaml_files/polychord_fast_slow.yaml
@@ -172,6 +172,7 @@ Scanner:
       like:  LogLike
       nlive: 150
       tol: 0.01
+      #printer_speed_threshold: 1  # This is buggy #
       fast_params:
         - cosmo_nuisance_Planck_TTTEEE::A_cib_217
         - cosmo_nuisance_Planck_TTTEEE::A_planck
