Add model parameters as derived parameters to native polychord output
	modified:       ScannerBit/src/scanners/polychord/polychord.cpp
	modified:       yaml_files/polychord_fast_slow.yaml
	modified:       yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -85,6 +85,7 @@ Scanner:
     polychord:
       plugin: polychord
       like:  LogLike
+      print_parameters_in_native_output: true
       tol: 0.1
 
 
