--- a/yaml_files/polychord_fast_slow.yaml
+++ b/yaml_files/polychord_fast_slow.yaml
@@ -172,6 +172,7 @@ Scanner:
       like:  LogLike
       nlive: 150
       tol: 0.01
+      print_parameters_in_native_output: true
       #printer_speed_threshold: 1  # This is buggy #
       fast_params:
         - cosmo_nuisance_Planck_TTTEEE::A_cib_217
