Re-arranged and renamed classy_set_.. functions to set different input for classy input dictionary. Updated names of capabilites in question in all yaml files.
	modified:   Backends/include/gambit/Backends/frontends/classy_2_6_3.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_2_9_3.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_exo_2_7_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_exo_2_7_2.hpp
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_2_9_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_2.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_inflationTest.yaml
	modified:   yaml_files/CosmoBit_quickStart.yaml
	modified:   yaml_files/CosmoBit_testALP.yaml
	modified:   yaml_files/CosmoBit_testCosmo.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml
	modified:   yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -59,8 +59,8 @@
 Parameters:
 
   # Neutrino masses, choose between normal hierachy (NH) and inverted hierarch (IH)
-  StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
-  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
+  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
+  StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
   # To fix the sum of the neutrino masses to 0.06 with only one massive neutrino
   #    (as in Planck 'baseline' analysis don't include the model 'StandardModel_mNudiff'
@@ -94,16 +94,16 @@ Parameters:
       range: [0.9,1.10]
 
   # extension of standard LCDM: allow for values of dNeff @CMB & @ BBN different from today
-  dNurBBN_dNurCMB:
-    dNur_BBN:
-      prior_type: flat
-      range: [0.000,0.50]
-    dNur_CMB:
-      prior_type: flat
-      range: [0.000,0.50]
+  #dNurBBN_dNurCMB:
+  #  dNur_BBN:
+  #    prior_type: flat
+  #    range: [0.000,0.50]
+  #  dNur_CMB:
+  #    prior_type: flat
+  #    range: [0.000,0.50]
 
   # Include this if you use the Pantheon SNe likelihood into your scan
-  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
+  #cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
 
 #======== 3) Prior setup ========
@@ -179,7 +179,7 @@ ObsLikes:
     # i) Choose which likelihoods to include (simple way)
     sub_capabilities:
       - bao_smallz_2014
-      - Pantheon
+      #- Pantheon
     # ii) Choose which likelihoods to include (complicated way).  You can give a path to the '<likelihood_name>.data'
     #     file containing the settings that you want the likelihood to run with (e.g. path to data, which z-bins to use... ).
     #     Note that the path must be given relative to your GAMBIT directory.  If you set it to "default", or empty,
@@ -207,8 +207,8 @@ ObsLikes:
     # i) Choose which likelihoods to include (simple way)
     sub_capabilities:
       - bao_smallz_2014
-      - Pantheon
-      - Planck_SZ
+      #- Pantheon
+      #- Planck_SZ
     # ii) Choose which likelihoods to include (complicated way).
     #sub_capabilities:
     #  bao_smallz_2014: Backends/installed/montepythonlike/3.1.0/montepython/likelihoods/bao_smallz_2014/bao_smallz_2014.data
@@ -239,7 +239,7 @@ Rules:
   # If you have not installed MontePython, the second option must be used.
   # GAMBIT will stop and tell you to fix this if you get it wrong though, so don't stress.
   # (i) set CLASS input with MP compatibility
-  - capability: classy_final_input
+  - capability: classy_MPLike_input
     function: set_classy_input_with_MPLike
   # (ii) set CLASS input without MP compatibility
   #- capability: classy_final_input
