--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -140,7 +140,7 @@ Rules:
 
   # you have to set by hand if you want to set the class parameters with or without setting arguments from MontePython Likelihoods
   # if the montepythonlike backend is installed (if not it should automatically choose the function 'init_Classy_cosmo_container')
-  - capability: classy_final_input
+  - capability: classy_MPLike_input
     function: set_classy_input_with_MPLike
     module: CosmoBit
 
