--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -13,6 +13,13 @@
 Parameters:
   StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
 
+  # nuisance parameters for Planck likelihood
+  #  => if you don't include the Planck likelihoods into the scan you should get a FATAL Error
+  #     telling you that no function requires any of the model parameters, comment this line out
+  #     to fix it
+  # (try to comment this line or the Planck likelihoods then you can see the different error messages)
+  cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
+
   LCDM:
     omega_b:
       fixed_value: 2.24052e-02
@@ -27,6 +34,8 @@ Parameters:
   Inflation_InstReh_1quartic:
     lambda: 1.0e-10
 
+  dNurCMB:
+    dNur_CMB: 0.01
 
 #======== Prior setup ========
 Priors:
@@ -59,6 +68,13 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
+  - purpose:      LogLike
+    capability:   BBN_LogLike
+    sub_capabilities: D
+
+  - purpose:      LogLike
+    capability:   Planck_lowl_loglike
+    function:     function_Planck_lowl_TTEE_2018_loglike
 
   - purpose:      LogLike
     capability:   MP_Combined_LogLike
@@ -90,14 +106,14 @@ Rules:
     backends:
     - {capability: get_classy_cosmo_object, backend: classy, version: 2.6.3}
 
-  - capability: classy_final_input
+  - capability: classy_MPLike_input
     function: set_classy_input_with_MPLike
 
   - capability: classy_primordial_parameters
     function: set_classy_parameters_parametrised_ps
     #function: set_classy_parameters_primordial_ps
 
-  - capability: classy_baseline_params
+  - capability: classy_input_params
     #function: set_classy_baseline_params
     options:
       classy_dict:
