changed DarkBit_MSSM7.yaml to use DS6 (and updated DS5 options, commented out)

--- a/yaml_files/DarkBit_MSSM7.yaml
+++ b/yaml_files/DarkBit_MSSM7.yaml
@@ -118,17 +118,19 @@ Printer:
   # Can switch to the ascii printer by commenting out and
   # using the ascii lines below
 
-  printer: hdf5
-  options:
-    output_file: "MSSM7.hdf5"
-    group: "/MSSM7"
-    delete_file_on_restart: true
+  #printer: hdf5
+  #options:
+  #  output_file: "MSSM7.hdf5"
+  #  group: "/MSSM7"
+  #  delete_file_on_restart: true
 
   #printer: ascii
   #options:
   #  output_file: "MSSM7.txt"
   #  buffer_length: 10
   #  delete_file_on_restart: true
+
+  printer: cout 
 
 
 Scanner:
@@ -260,9 +262,19 @@ ObsLikes:
 
 Rules:
 
-  # Options for Process Catalog setup
-  - function: TH_Process_Catalog_MSSM
+  # Choose between the process catalogue for DarkSUSY 5 and DarkSUSY 6, respectively 
+#  - capability:  TH_ProcessCatalog
+#    function: TH_ProcessCatalog_DS_MSSM
+#  - function: TH_ProcessCatalog_DS_MSSM
+#    options:
+#       ignore_three_body: false # Ignore 3 body final states?
+#       ProcessCatalog_MinBranching: 0 # Minimum branching fraction of included processes
+
+  - capability:  TH_ProcessCatalog
+    #function: TH_ProcessCatalog_DS5_MSSM
+    function: TH_ProcessCatalog_DS_MSSM
     options:
+       # options are identical for DS5 and DS (=DS6+) versions
        ignore_three_body: false # Ignore 3 body final states?
        ProcessCatalog_MinBranching: 0 # Minimum branching fraction of included processes
 
@@ -304,11 +316,11 @@ Rules:
        oh2_obs: 0.1188
     #function: RD_fraction_one # Do not rescale the local DM density
 
-  - function: DarkSUSY_5_1_3_init
-    options:
-       # Set the below to true to write SLHA file to disk and read it in using DarkSUSY
-       # SLHA reader instead of using diskless initialisation (not recommended!)
-       use_dsSLHAread: false
+#  - function: DarkSUSY_5_1_3_init
+#    options:
+#       # Set the below to true to write SLHA file to disk and read it in using DarkSUSY
+#       # SLHA reader instead of using diskless initialisation (not recommended!)
+#       use_dsSLHAread: false
 
   # Choose whether MicrOmegas calculates decays widths for the MSSM internally using CalcHEP (internal_decays=true) or uses
   # values from the GAMBIT decay table (internal_decays=false).
@@ -318,13 +330,16 @@ Rules:
        VZdecay: 1 # 0 - no 3 body final states, 1 - virtual Z in annihilations, 2 - virtual Z in coannihilations
        VWdecay: 1 # 0 - no 3 body final states, 1 - virtual W in annihilations, 2 - virtual W in coannihilations
 
-  # Use DarkSUSY (not recommended), MicrOmegas or the DarkBit native calculator for the relic density?
+  # Use DarkSUSY directly (not recommended), MicrOmegas or the DarkBit native calculator (based on the DarkSUSY Boltzmann solver) for the relic density?
   # Consult the DarkBit manual for the required options in each case
   - capability: RD_oh2
-    function: RD_oh2_general
+    #function: RD_oh2_DS5_general
+    #options:
+    #  fast: 1  # 0: standard, 1: fast (default)
+    function: RD_oh2_DS_general
     options:
-      fast: 1  # 0: standard, 1: fast (defalt)
-    #function: RD_oh2_DarkSUSY
+      fast: 1  # 0: standard, 1: fast (default)
+    #function: RD_oh2_DarkSUSY_DS5
     #options:
     #  fast: 1  # 0: standard (default), 1: fast, 2: dirty
     #  omtype: 1  # 0: no coann, 1: all coann (default)
@@ -332,6 +347,21 @@ Rules:
     #options:
     #  fast: 1  # 0: standard (default), 1: fast
     #  Beps: 1e-5  #  1e-5: standard, 1: switches coann off
+
+  # Choose between initializing the invariant rate calculation for DS5 and DS6
+  - capability: RD_eff_annrate_DSprep_MSSM 
+    function: RD_annrate_DSprep_MSSM_func
+    #function: RD_annrate_DSprep_MSSM_func
+
+  # Input type for oh2 calculations needed by DS5 and DS6, respectively
+  - capability: RD_spectrum  
+    #function: RD_spectrum_SUSY_DS5
+    function: RD_spectrum_MSSM 
+
+
+  # Choose between the functions sigmav_late_universe and sigmav_late_universe_MicrOmegas
+  - capability: sigmav
+    function: sigmav_late_universe
 
   # Gamma-ray likelihoods (See DarkBit paper for details on version options)
   -  function: lnL_FermiLATdwarfs_gamLike
@@ -372,8 +402,10 @@ Rules:
 
   # Use DarkSUSY or MicrOmegas for calculating direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_DarkSUSY
+    #function: DD_couplings_DarkSUSY_DS5
+    function: DD_couplings_DarkSUSY_MSSM
     options:
+      # these options are identical for the DS5 and DS6 (DS_MSSM) versions
       # If the below is true, 1 loop effects as discuseed in Drees Nojiri
       # Phys.Rev. D48 (1993) 3483 are included (default: true)
       loop: true
@@ -550,9 +582,9 @@ Logger:
     [Default] : "default.log"
     [DecayBit] : "DecayBit.log"
     [DarkBit] : "DarkBit.log"
-    [PrecisionBit] : "PrecisionBit.log"
-    [FlavBit] : "FlavBit.log"
-    [ColliderBit] : "ColliderBit.log"
+#    [PrecisionBit] : "PrecisionBit.log"
+#    [FlavBit] : "FlavBit.log"
+#    [ColliderBit] : "ColliderBit.log"
     [SpecBit] : "SpecBit.log"
     [Dependency Resolver] : "dep_resolver.log"
 
