Updated yaml files
	modified:   yaml_files/CosmoBit_ALP.yaml
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_inflationTest.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -133,7 +133,7 @@ ObsLikes:
       bao_smallz_2014: default
       Pantheon: default
       Planck_SZ: default
-      WiggleZ: default
+      #WiggleZ: default -> does not work atm with python3 #todo
 
 #======== Rule entries ========
 Rules:
