--- a/yaml_files/MSSM7.yaml
+++ b/yaml_files/MSSM7.yaml
@@ -307,8 +307,9 @@ Rules:
   #- options:
   #    drop_SLHA_file: true
 
-  # Choose to use DarkSUSY rather than Capt'n General for calculating the capture rate of DM in the Sun
+  # Choose to use DarkSUSY 6 rather than Capt'n General for calculating the capture rate of DM in the Sun
   - capability: capture_rate_Sun
+    #function: capture_rate_Sun_const_xsec_DS5
     function: capture_rate_Sun_const_xsec
 
   # Globally permit maximal mixing between gauge and family eigenstates
@@ -340,18 +341,43 @@ Rules:
   - capability: RD_fraction
     function: RD_fraction_leq_one
 
-  # Use DarkSUSY, MicrOmegas or the DarkBit native calculator for the relic density?
+  # Use DarkSUSY directly , MicrOmegas or the DarkBit native calculator (based on the DarkSUSY Boltzmann solver) for the relic density?
+  # Consult the DarkBit manual for the required options in each case
   - capability: RD_oh2
-    function: RD_oh2_general
-    #function: RD_oh2_DarkSUSY
-    #function: RD_oh2_MicrOmegas
+    #function: RD_oh2_DS5_general
+    function: RD_oh2_DS_general
     options:
-      # for all calculations
-      fast: 1
-      # used by RD_oh2_DarkSUSY only
-      omtype: 1
-      # used by RD_oh2_MicrOmegas only
-      Beps: 1e-5
+      # these options are identical for DS5 and DS6+ version 
+      fast: 1  # 0: standard, 1: fast (default)
+    #function: RD_oh2_DarkSUSY_DS5
+    #options:
+    #  fast: 1  # 0: standard (default), 1: fast, 2: dirty
+    #  omtype: 1  # 0: no coann, 1: all coann (default)
+    #function: RD_oh2_MicrOmegas
+    #options:
+    #  fast: 1  # 0: standard (default), 1: fast
+    #  Beps: 1e-5  #  1e-5: standard, 1: switches coann off
+
+  # Choose to use the function RD_eff_annrate_DS_MSSM rather than RD_eff_annrate_from_ProcessCatalog
+  - capability: RD_eff_annrate
+    function: RD_eff_annrate_DS_MSSM
+  # ...and use the function RD_annrate_DSprep_MSSM_func to supply the dependency RD_eff_annrate_DSprep_MSSM 
+  - capability: RD_eff_annrate_DSprep_MSSM
+    function: RD_annrate_DSprep_MSSM_func
+    #function: RD_annrate_DSprep_MSSM_func
+  # ...and get the dependency RD_spectrum from RD_spectrum_MSSM
+  - capability: RD_spectrum
+    #function: RD_spectrum_SUSY_DS5
+    function: RD_spectrum_MSSM
+
+  # Choose module function to provide the TH_ProcessCatalog
+  - capability: TH_ProcessCatalog
+    #function: TH_ProcessCatalog_DS5_MSSM # For DarkSUSY 5
+    function: TH_ProcessCatalog_DS_MSSM   # For DarkSUSY 6
+
+  # Choose between the functions sigmav_late_universe and sigmav_late_universe_MicrOmegas
+  - capability: sigmav
+    function: sigmav_late_universe
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
   - capability: lnL_FermiLATdwarfs
@@ -359,13 +385,17 @@ Rules:
 
   # Choose to use DarkSUSY yield tables for indirect detection
   - capability: SimYieldTable
+    #function: SimYieldTable_DS5
     function: SimYieldTable_DarkSUSY
     options:
       allow_yield_extrapolation: true
 
   # Use DarkSUSY or MicrOmegas for calculating direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_DarkSUSY
+    #function: DD_couplings_DarkSUSY_DS5
+    function: DD_couplings_DarkSUSY_MSSM
+    options: 
+      loop: true
     #function: DD_couplings_MicrOmegas
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
@@ -507,6 +537,10 @@ Rules:
       ms_central: 95.E-03
       ms_error: 5.E-03
 
+  # Choose to get collider cross-sections from the event generator (Pythia)
+  - capability: CrossSection
+    function: getMCxsec
+
   # ATLAS detector simulation
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearATLAS"
@@ -569,23 +603,23 @@ Rules:
       halt_when_systematic_dominated: true
       all_SR_must_converge: false
 
-  # Define Monte Carlo event simulator and associated options.
+  # Choose Monte Carlo event simulator and options.
   - capability:  HardScatteringSim
-    function:  getPythia
+    type: ColliderPythia_defaultversion
+    function: getPythia
     options:
-      # Pythia_doc_path defaults to the xmldoc directory of the default Pythia
-      # backend. So, this must only be set if the user chooses a different Pythia.
-      # Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
-                             "PartonLevel:MPI = off",
-                             "PartonLevel:ISR = on",
-                             "PartonLevel:FSR = on",
-                             "HadronLevel:all = on",
-                             "SUSY:all = on",
-                             "TauDecays:mode = 0",
-                             "TimeShower:pTmin = 2"]
-
-      xsec_vetos: [0.028]  # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
+      LHC_13TeV:
+        # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
+        xsec_veto: 0.028
+        pythia_settings:
+          - Print:quiet = on
+          - PartonLevel:MPI = off
+          - PartonLevel:ISR = on
+          - PartonLevel:FSR = on
+          - HadronLevel:all = on
+          - SUSY:all = on
+          - TauDecays:mode = 0
+          - TimeShower:pTmin = 2
 
   # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
   - capability: LHC_LogLikes
