--- a/yaml_files/DiracSingletDM_Z2.yaml
+++ b/yaml_files/DiracSingletDM_Z2.yaml
@@ -134,9 +134,17 @@ ObsLikes:
 
 Rules:
 
-  # Use the DarkBit native calculator for the relic density
+  # Use DarkBit native calculator (based on the DarkSUSY Boltzmann solver)for relic density
   - capability: RD_oh2
-    function: RD_oh2_general
+    #function: RD_oh2_DS5_general
+    function: RD_oh2_DS_general
+    options:
+      # these options are identical for DS5 and DS6+ version 
+      fast: 1  # 0: standard, 1: fast (default when co-annihilations etc are involved)
+
+  # Choose between the functions sigmav_late_universe and sigmav_late_universe_MicrOmegas
+  - capability: sigmav
+    function: sigmav_late_universe
 
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
@@ -165,6 +173,13 @@ Rules:
       sigmal_obs: 50.0
       sigmal_obserr: 15.0
 
+  # Use DS5 or DS6 (DS_genericWIMP) for calculating neutrino yields
+  - capability: nuyield_ptr
+    function: nuyield_from_DS
+    backends:
+    #  - {backend: DarkSUSY, version: 5.1.3}
+      - {backend: DarkSUSY_generic_wimp}
+
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
     function: capture_rate_Sun_vnqn
@@ -175,6 +190,7 @@ Rules:
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
+    #function: SimYieldTable_DS5
     function: SimYieldTable_DarkSUSY
     options:
       allow_yield_extrapolation: true
@@ -192,6 +208,7 @@ Rules:
 ##############################################################################################
 Printer:
 
+  #printer: cout 
   printer: hdf5
 
   options:
