Updated FindMathematica script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,7 +396,7 @@ else()
   find_library(LIBUUID NAMES uuid)
   if(LIBUUID)
     message("   Found library libuuid")
-    find_package(Mathematica 10.0)
+    find_package(Mathematica 10.0 QUIET)
     if(Mathematica_FOUND AND (NOT DEFINED Mathematica_Invalid_License OR IGNORE_MATHEMATICA_LICENSE))
       message("${BoldYellow}   Found Mathematica.${ColourReset}")
       if(Mathematica_WSTP_FOUND)
